examples/bad/refference_error.mtch
int f(int b, string @a) {
    int x = 5;
    int c = 9;

    return b;
}

int main() {
    print(f(4, "Hello"));

    return 0;
}